Make splinter network endpoints plural
Updates the network endpoints exposed by splinterd and listed in the
node registry and circuit definitions to be lists of endpoints rather
than single endpoints. This change will allow splinter nodes to expose
endpoints for different protocols in the future.
